modified:   css/style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,23 @@
 body{
+    min-height: 100vh;
     font-family:'Outfit', sans-serif ;
     max-width:1440px;
     margin: 0 auto;
     background-color:  #D5E1EF;
     color: #21334B;
+    display: grid;
 }
 
 main{
+    display: grid;
     padding: 25px;
     justify-content: center;
     display: flex;
+   
 }
 
 main .cartao{
+    margin-top: 50px;
     background-color:#FFFFFF ;
     text-align: center;
     gap: 15px;
@@ -46,6 +51,6 @@ main .cartao{
 footer{
     text-align: center;
     font-size: 11px;
-    margin-top: 35px;
+    margin-top: 15px;
     margin-right:6px;
 }
